[metadata]
name = mypy-zope
version = 1.0.7
author = Andrey Lebedev
author_email = andrey.lebedev@gmail.com
url = https://github.com/Shoobx/mypy-zope
long_description = file: README.md
long_description_content_type = text/markdown
description = Plugin for mypy to support zope interfaces
keywords = mypy, zope, interfaces, typing
classifiers =
    Development Status :: 5 - Production/Stable
    Environment :: Console
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: 3.13
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Topic :: Software Development

[options]
packages =
    mypy_zope
    zope-stubs
    zope-stubs.schema
    zope-stubs.interface
    zope-stubs.interface.common
package_dir = =src
install_requires =
    mypy>=1.0.0,<1.12.0
    zope.interface
    zope.schema
include_package_data = True
zip_safe = False

[options.extras_require]
test =
    pytest>=4.6
    pytest-cov
    lxml

[zest.releaser]
create-wheel = yes

[flake8]
max-line-length = 88
ignore =
    # Black creates whitespace before colon
    E203

[check-manifest]
ignore =
    mypy-zope.ini
    mypy-zope
    Makefile
    tox.ini
